Entorno Gráfico version 0.0.1

--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Master Mind - Bujalance García Juan Antonio</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <script src="js/guiMasterMinds.js"></script>
     <script src="js/MasterMind.js"></script>
+    
+
 </head>
+
 <body>
-    <header>
-        <h1>Master Mind</h1>
-    </header>
     <main>
-        
+        <div id="cajaIzquierda">
+            <div id="cajaCombinacion">
+                <svg  height="100" width="100">
+                    <circle id="ficha1" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="gray"/>
+                </svg>
+                <svg height="100" width="100">
+                    <circle  cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+            </div>
+            <div id="cajaSolucion">
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="gray" />
+                </svg>
+            </div>
+        </div>
+        <div id="cajaDerecha">
+
+            <div id="columnaColores">
+                <svg id="fichaRoja" height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="white" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="black" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="yellow" />
+                </svg><svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="orange" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="brown" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="blue" />
+                </svg>
+                <svg height="100" width="100">
+                    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" />
+                </svg>
+                <img id="comprobarIntento" src="https://raw.githubusercontent.com/google/material-design-icons/master/action/2x_web/ic_check_circle_black_48dp.png" alt="">
+            </div>
+        </div>
     </main>
 </body>
+
 </html>
